test/domains/vass/domain-slice-error-1.chpl

var D = {1..5, 1..3};
D(2..4);
